--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
 
 
-  <title>Frontend Mentor | Todo app</title>
+  <title> Todo app</title>
 </head>
 
 <body>
